2008-12-10   D. V. Wiebe <getdata@ketiltrout.net>  svn:265
	* src/encoding.c (_GD_EncodingUnderstood): Understand GD_TEXT_ENCODED.

	* src/encoding.c (_GD_RecodeFragment): Properly handle moving the temporary
	file and deleting the old file.

	* src/encoding.c (get_encoding): Determine encoding if needed.  Report
	GD_ENC_UNSUPPORTED if encoding is not understood.

2008-12-09   D. V. Wiebe <getdata@ketiltrout.net>  svn:264
	* test/endian_move.c test/endian_get.c test/endian_alter.c: Added.

	* src/endian.c: Use unsigned long for byte_sex parameters.

	* src/endian.c (_GD_ByteSwapFragment) src/open.c (dirfile_cbopen)
	src/include.c (_GD_Include): Canonicalise byte sex as soon as possible.

	* src/ascii.c (_GD_AsciiTemp) src/raw.c (_GD_RawTemp): Check for valid
	field name before trying move.

	* src/endian.c (_GD_ByteSwapFragment): Don't bother checking encoding ecor
	before calling _GD_Mogrify.

	* src/endian.c (get_endianness): Return unsigned long and 0 on error.

2008-12-08   D. V. Wiebe <getdata@ketiltrout.net>  svn:263
	* test/foffs_move.c test/foffs_get.c test/foffs_alter.c: Added.

2008-12-08   D. V. Wiebe <getdata@ketiltrout.net>  svn:261
	* test/alter_multiply.c test/alter_entry.c test/alter_phase.c
	test/alter_linterp_move.c test/alter_lincom_input.c
	test/alter_lincom_slope.c test/alter_linterp.c test/alter_const.c
	test/alter_raw_type.c test/alter_entry_recode.c test/alter_bit_bitnum.c
	test/alter_raw_spf.c test/alter_bit_numbits.c test/alter_lincom_offset.c:
	Added.

	* src/flush.c (_GD_FlushMeta): Preserve access mode for fragments.
	* src/ascii.c (_GD_AsciiTemp) src/raw.c (_GD_RawTemp): Preserve access mode.

	* src/mod.c (_GD_Change): Don't initialise enc until subencoding is
	determined.  Fully determine LUT table paths.  Type convert CONST data as
	needed.  Fix lincom argument handling.

	* src/mod.c (dirfile_alter_raw): Swap order of spf and data type arguments
	to correspond to dirfile_add_raw().
